working on mobile height issues on home.css

--- a/pages/home/Home.css
+++ b/pages/home/Home.css
@@ -11,7 +11,7 @@
 
 
 .home-section {
-    height: 100dvh;
+    max-height: 100dvh;
     width: 100vw;         
     max-width: 100vw;    
     display: flex;
